--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,49 @@
 version: '3'
 services:
   zookeeper:
+    image: confluentinc/cp-zookeeper:7.2.1
     container_name: zookeeper
-    image: confluentinc/cp-zookeeper:6.2.0
-    ports:
-      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-
-  kafka: # broker 0
-    container_name: kafka
-    image: confluentinc/cp-kafka:6.2.0
+  kafka1:
+    image: confluentinc/cp-kafka:7.2.1
+    container_name: kafka1
     ports:
-      - "9092:9092"
+      - "8097:8097"
+    depends_on:
+      - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    depends_on:
-      - zookeeper
-
-  kafka2: # broker 1
-    image: confluentinc/cp-kafka:6.2.0
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8097,INTERNAL://kafka1:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+  kafka2:
+    image: confluentinc/cp-kafka:7.2.1
     container_name: kafka2
     ports:
-      - "9093:9092"  # Porta externa diferente para evitar conflitos
-    environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9092  # nome de host diferente
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      - "8098:8098"
     depends_on:
       - zookeeper
-
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8098,INTERNAL://kafka2:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+  kafka3:
+    image: confluentinc/cp-kafka:7.2.1
+    container_name: kafka3
+    ports:
+      - "8099:8099"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8099,INTERNAL://kafka3:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
@@ -43,8 +51,12 @@ services:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: "Kafka Cluster 1"
-      KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka:9092"
+      KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka1:9092"
       KAFKA_CLUSTERS_1_NAME: "Kafka Cluster 2"
       KAFKA_CLUSTERS_1_BOOTSTRAP_SERVERS: "kafka2:9092"
+      KAFKA_CLUSTERS_2_NAME: "Kafka Cluster 3"
+      KAFKA_CLUSTERS_2_BOOTSTRAP_SERVERS: "kafka3:9092"
     depends_on:
-      - kafka
+      - kafka1
+      - kafka2
+      - kafka3
