--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,69 @@
-version: '3'
+version: '3.8'
+
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.2.1
+    image: confluentinc/cp-zookeeper:latest
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-  kafka1:
-    image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka1
-    ports:
-      - "8097:8097"
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka-broker1:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka-broker1
     depends_on:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8097,INTERNAL://kafka1:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-  kafka2:
-    image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka2
-    ports:
-      - "8098:8098"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker1:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  kafka-broker2:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka-broker2
     depends_on:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8098,INTERNAL://kafka2:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-  kafka3:
-    image: confluentinc/cp-kafka:7.2.1
-    container_name: kafka3
-    ports:
-      - "8099:8099"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker2:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  kafka-broker3:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka-broker3
     depends_on:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:8099,INTERNAL://kafka3:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker3:9094
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry:latest
+    container_name: schema-registry
+    depends_on:
+      - zookeeper
+      - kafka-broker1
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
+      SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka-broker1:9092,PLAINTEXT://kafka-broker2:9093,PLAINTEXT://kafka-broker3:9094'
+
   kafka-ui:
-    container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      - kafka-broker1
+      - kafka-broker2
+      - kafka-broker3
     ports:
       - "8080:8080"
     environment:
-      KAFKA_CLUSTERS_0_NAME: "Kafka Cluster 1"
-      KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka1:9092"
-      KAFKA_CLUSTERS_1_NAME: "Kafka Cluster 2"
-      KAFKA_CLUSTERS_1_BOOTSTRAP_SERVERS: "kafka2:9092"
-      KAFKA_CLUSTERS_2_NAME: "Kafka Cluster 3"
-      KAFKA_CLUSTERS_2_BOOTSTRAP_SERVERS: "kafka3:9092"
-    depends_on:
-      - kafka1
-      - kafka2
-      - kafka3
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-broker1:9092,kafka-broker2:9093,kafka-broker3:9094
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8081
