--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
     depends_on:
       - kafka-ui
       - zookeeper
+      - flink-jobmanager
+      - flink-taskmanager
     command: >
       bash -c "
       echo 'Waiting for the brokers to be ready...'
@@ -89,3 +91,22 @@ services:
       kafka-topics --create --if-not-exists --bootstrap-server kafka-broker1:9092 --partitions 1 --replication-factor 1 --topic message-topic-example
       echo 'Topic created successfully.'
       "
+
+  flink-jobmanager:
+    image: flink:latest
+    container_name: flink-jobmanager
+    ports:
+      - "8081:8081"  # UI port
+    command: jobmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
+
+  flink-taskmanager:
+    image: flink:latest
+    container_name: flink-taskmanager
+    depends_on:
+      - flink-jobmanager
+    command: taskmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
+      - TASK_MANAGER_NUMBER_OF_TASK_SLOTS=2  # você pode ajustar isso conforme necessário
